--- a/testt/other_test/testextract.ipynb
+++ b/testt/other_test/testextract.ipynb
@@ -33,6 +33,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['QmSYSi2nnYCvAN6wCQ88oQ7ojm7xrBy6DjmnKJL2Rty8DF', 'QmNe3kkMMUuGHNb9dovtupAztvBqmVfQoHpp9C6yria46Q', 'QmPiRbnfHxne4opfJtPmBcP98r3vUi3R7RptnjvTVomqNC', 'QmcCeHq8GGe8r3Qtoi8C2FJhVeWuRqfUYjK7x6pxRP3AwF', 'QmdiCS8L5TGdYrvZioneSSi4zPJeQhaV37HKp7pCGiEXq9']\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\n",
+    "    'USA_Client_1': 'QmSYSi2nnYCvAN6wCQ88oQ7ojm7xrBy6DjmnKJL2Rty8DF',\n",
+    "    'USA_Client_2': 'QmNe3kkMMUuGHNb9dovtupAztvBqmVfQoHpp9C6yria46Q',\n",
+    "    'USA_Client_3': 'QmPiRbnfHxne4opfJtPmBcP98r3vUi3R7RptnjvTVomqNC',\n",
+    "    'USA_Client_4': 'QmcCeHq8GGe8r3Qtoi8C2FJhVeWuRqfUYjK7x6pxRP3AwF',\n",
+    "    'USA_Client_5': 'QmdiCS8L5TGdYrvZioneSSi4zPJeQhaV37HKp7pCGiEXq9'\n",
+    "}\n",
+    "\n",
+    "# Extract all hashes\n",
+    "hashes = list(data.values())\n",
+    "\n",
+    "# Print the list of hashes\n",
+    "print(hashes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
