dynamically ipfs and broker Changes

--- a/testt/other_test/testextract.ipynb
+++ b/testt/other_test/testextract.ipynb
@@ -62,6 +62,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['QmRdj9MiRduK4NDoDpEtGZmJBm3Bb8F85vbT5FLS5VmY7q', 'QmRLEfaJTrhmhSAiuawz56k18iUxj1tsLzmLMpbwTiR6jU', 'QmR3gbdGdVPAabxbXU9gtA8JtiSnne98NACX4uxg3mxD1g']\n"
+     ]
+    }
+   ],
+   "source": [
+    "client_hash_mapping ={'USA_Client_1': 'QmRdj9MiRduK4NDoDpEtGZmJBm3Bb8F85vbT5FLS5VmY7q', 'USA_Client_2': 'QmRLEfaJTrhmhSAiuawz56k18iUxj1tsLzmLMpbwTiR6jU', 'USA_Client_3': 'QmR3gbdGdVPAabxbXU9gtA8JtiSnne98NACX4uxg3mxD1g'} \n",
+    "\n",
+    "# Extract all hashes\n",
+    "hashes = list(client_hash_mapping.values())\n",
+    "\n",
+    "# Print the list of hashes\n",
+    "print(hashes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
