need to fix discount

--- a/testt/other_test/testextract.ipynb
+++ b/testt/other_test/testextract.ipynb
@@ -85,6 +85,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value for key key1 is ther\n",
+      "The value for key key2 is None\n",
+      "The value for key key3 is ther\n",
+      "The value for key key4 is None\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {'key1': 42, 'key2': None, 'key3': 'Hello', 'key4': None}\n",
+    "i=1\n",
+    "while True:\n",
+    "    i=i+1\n",
+    "    for key, value in my_dict.items():\n",
+    "        if value is None:\n",
+    "            print(f'The value for key {key} is None')\n",
+    "        else :\n",
+    "            print(f'The value for key {key} is ther')\n",
+    "    my_dict['key2']=3\n",
+    "    if i==3:\n",
+    "        break\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
